# toob-game

./: .gitignore  Cargo.toml  GRAPHICS_UPGRADE.md  README.md  build.sh
.github/instructions/: context_game.instructions.md  context_wikipedia.md.instructions.md  instructions_game.instructions.md
assets/: README.md
assets/data/: ovidio_metadata.json
assets/maps/: culiacan_map_layout.json
docs/: AUDIO_SYSTEM.md  EMOJI_SPRITES_UPGRADE.md  GAMEPLAY.md  PROJECT_COMPLETION.md  REPOSITORY_CLEANUP.md  VISUAL_FIX.md
src/: main.rs  main_simple.rs  ui_plugin.rs
src/components/: mod.rs
src/game/: mod.rs
src/plugins/: mod.rs
src/resources/: mod.rs
src/systems/: gameplay.rs  missions.rs  mod.rs  setup.rs  ui.rs
